refactor operation type complete